camel-connect/webhook-logger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-logger
  namespace: kafka
spec:
  selector:
    app: webhook-logger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
